<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Activities.SignUpActivity">

    <ImageView
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="23dp"
        android:contentDescription="@string/logo_app"
        android:src="@drawable/ic_exams" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="55dp"
        android:fontFamily="@font/bevietnampro_extrabold"
        android:text="@string/sign_up_label"
        android:textAllCaps="true"
        android:textSize="30sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:fontFamily="@font/bevietnampro_semibold"
            android:text="@string/email_label"
            android:textColor="@color/primary"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/email_edtxt"
            android:layout_width="295dp"
            android:layout_height="30dp"
            android:layout_marginTop="6dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edtxt_background"
            android:fontFamily="@font/bevietnampro_light"
            android:hint="@string/email_edtxt_placeholder"
            android:includeFontPadding="false"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="12dp"
            android:textColor="@color/primary"
            android:textColorHint="@color/primary"
            android:textCursorDrawable="@drawable/edtxt_cursor"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/bevietnampro_semibold"
            android:text="@string/password_label"
            android:textColor="@color/primary"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">

            <EditText
                android:id="@+id/signup_password_edtxt"
                android:layout_width="295dp"
                android:layout_height="30dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/edtxt_background"
                android:fontFamily="@font/bevietnampro_light"
                android:hint="@string/password_edtxt_placeholder"
                android:includeFontPadding="false"
                android:inputType="textPassword"
                android:longClickable="false"
                android:paddingHorizontal="12dp"
                android:textColor="@color/primary"
                android:textColorHint="@color/primary"
                android:textCursorDrawable="@drawable/edtxt_cursor"
                android:textSize="15sp" />

            <Button
                android:id="@+id/show_password_button"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_alignEnd="@+id/signup_password_edtxt"
                android:layout_centerVertical="true"
                android:layout_marginEnd="14dp"
                android:background="@drawable/ic_hide" />
        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/bevietnampro_semibold"
            android:text="@string/confirm_password_label"
            android:textColor="@color/primary"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">

            <EditText
                android:id="@+id/signup_confirm_password_edtxt"
                android:layout_width="295dp"
                android:layout_height="30dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/edtxt_background"
                android:fontFamily="@font/bevietnampro_light"
                android:hint="@string/confirm_password_edtxt_placeholder"
                android:includeFontPadding="false"
                android:inputType="textPassword"
                android:paddingHorizontal="12dp"
                android:textColor="@color/primary"
                android:textColorHint="@color/primary"
                android:textCursorDrawable="@drawable/edtxt_cursor"
                android:textSize="15sp" />

            <Button
                android:id="@+id/show_confirm_password_button"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_alignEnd="@+id/signup_confirm_password_edtxt"
                android:layout_centerVertical="true"
                android:layout_marginEnd="14dp"
                android:background="@drawable/ic_hide"
                android:padding="10dp" />
        </RelativeLayout>
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:background="@drawable/welcome_button_selector"
        android:includeFontPadding="false"
        android:text="@string/sign_up_btn"
        android:textAllCaps="false"
        android:textColor="@drawable/txtcolor_welcome_button_selector"
        android:textFontWeight="400"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="90dp"
            android:layout_height=".5dp"
            android:layout_marginTop="2dp"
            android:background="@color/primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="7dp"
            android:fontFamily="@font/bevietnampro_extralight"
            android:includeFontPadding="false"
            android:text="or sign up with"
            android:textSize="15sp"
            tools:ignore="HardcodedText" />

        <View
            android:layout_width="90dp"
            android:layout_height=".5dp"
            android:layout_marginTop="2dp"
            android:background="@color/primary" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:background="@drawable/ic_phay_buc_selector" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/ic_phay_buc_selector" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bevietnampro_extralight"
            android:text="@string/already_have_an_account_label"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/to_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bevietnampro_extralight"
            android:includeFontPadding="false"
            android:paddingHorizontal="10dp"
            android:paddingVertical="4dp"
            android:text="@string/login_here"
            android:textColor="@color/yellow_kv"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>